newArgo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: opsmxjob
spec:
  replicas: 2
  selector:
    matchLabels:
      app: opsmxjob
  revisionHistoryLimit: 2
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus_io_path: /mgmt/prometheus
        prometheus_io_port: '8088'
      labels:
        app: opsmxjob
    spec:
      containers:
        - name: opsmxjob
          image: quay.io/opsmxpublic/canary-issuegen:issue-canary-gen-1403
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
  strategy:
    canary:
      steps:
        - setWeight: 20
        - pause: { duration: 15s }
        - analysis:
            templates:
              - templateName: opsmxjob-analysis
            args:
              - name: canary-hash
                valueFrom:
                  podTemplateHashValue: Latest
              - name: baseline-hash
                valueFrom:
                  podTemplateHashValue: Stable
        - setWeight: 80
        - pause: { duration: 15s }
        - analysis:
            templates:
              - templateName: opsmxjob-analysis
            args:
              - name: canary-hash
                valueFrom:
                  podTemplateHashValue: Latest
              - name: baseline-hash
                valueFrom:
                  podTemplateHashValue: Stable
