newArgo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsmxjob-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
  selector:
    app: opsmxjob
